boost1.41 (1.41.0-1) unstable; urgency=low

  * New upstream.
  
  * Merge changes from 1.40.0-5:
    - Switch to source format "3.0 (quilt)".
    - Remove hard-coding of python versions.

 -- Steve M. Robbins <smr@debian.org>  Mon, 21 Dec 2009 00:01:01 -0600

boost1.40 (1.40.0-4) unstable; urgency=low

  * rtupdate: Don't die if link target doesn't exist.  Update of
    libboost_mpi_python links failed when boost-python but not
    boost-mpi-python installed, causing postinst to fail.  
    Closes: #556625.

 -- Steve M. Robbins <smr@debian.org>  Tue, 17 Nov 2009 20:58:40 -0600

boost1.40 (1.40.0-3) unstable; urgency=low

  * rules: Keep all headers in package libboostX.Y-dev to avoid bugs about
    one boost lib using headers of another boost lib.  Boost is developed
    as a monolith.  Closes: #548503, #553281, #550006.
  
  * control(libboost1.40-dev): Move libboost-python1.40-dev from Depends
    to Suggests; this is possible now that -dev contains all the header
    files.  Closes: #549935.
  
  * patches/boost-build-pythonid.patch: New (thanks, Gaudenz
    Steinlin).  Add --pythonid parameter to the build system to only add
    an identification to Python libraries.

  * control:
  * rtupdate:
  * rules: Build libboost-mpi-python1.40.0 and
    libboost-mpi-python1.40-dev.  Thanks again to Gaudenz Steinlin.
    Closes: #552014.
  
  * patches/hurd-ellint_rd.patch:
  * patches/hurd-execution_monitor.patch: New (thanks, Pino Toscano).
    Patches for building on hurd.  Closes: #552383.

 -- Steve M. Robbins <smr@debian.org>  Sat, 14 Nov 2009 22:44:30 -0600

boost1.40 (1.40.0-2) unstable; urgency=low

  * rules:
  * control: New package libboost-graph-parallel (thanks, Mathieu
    Malaterre).  Closes: #549203.

  * [Merge from 1.39.0-5] rules: Rule $(bjam) needs to depend on
    $(QUILT_STAMPFN) because patches/bootstrap.patch modifies script
    bootstrap.sh, used to build $(bjam).  Thanks to Andreas Ferber for the