@@ -2,7 +2,7 @@ Patch from Gaudenz Steinlin <gaudenz@debian.org>
 Debian bug: #552014
 Reported upstream: https://svn.boost.org/trac/boost/ticket/3544
 
-Add --pythonid parameter to the build system to only add an identification 
+Add --xpythonid parameter to the build system to only add an identification 
 to Python libraries. The existing --buildid parameter adds an id to all 
 libraries and leads to uneccessary duplication of libraries if only the 
 Python version for the build is different.
@@ -14,7 +14,7 @@ Python version for the build is different.
  }
  
 +# Python build id (only for Python libraries)
-+local python-id = [ MATCH "^--pythonid=(.*)" : [ modules.peek : ARGV ] ] ;
++local python-id = [ MATCH "^--xpythonid=(.*)" : [ modules.peek : ARGV ] ] ;
 +if $(python-id)
 +{
 +    constant PYTHON_ID : [ regex.replace $(python-id) "[*\\/:.\"\']" "_" ] ;
