@@ -25,7 +25,7 @@ boost_lib_math_long_double := math_c99l math_tr1l
 boost_lib_serialization := serialization wserialization
 boost_lib_test := prg_exec_monitor unit_test_framework
 
-# These are special cases for suffixes.  Generally come from --pythonid, so begin with a dash.
+# These are special cases for suffixes.  Generally come from --xpythonid, so begin with a dash.
 boost_suffixes_python := $(addprefix -py,$(subst .,,$(shell pyversions -rv)))
 boost_suffixes_mpi-python := $(boost_suffixes_python)
 
@@ -167,7 +167,7 @@ build-stamp: $(bjam) user-config.jam
 	for pyver in $(shell pyversions -rv); do \
 	 	pyid=$$(echo $$pyver | tr -d .); \
 		echo "Building Boost.Python for python version $pyver"; \
-	 	$(JAM) --with-python --with-mpi --pythonid=py$$pyid python=$$pyver; \
+	 	$(JAM) --with-python --with-mpi --xpythonid=py$$pyid python=$$pyver; \
 	 	mv stage/lib/mpi.so stage/lib/mpi-py$$pyid.so; \
 	done
 
@@ -226,7 +226,7 @@ install: build clean-debhelper $(filtered_files)
 	$(JAM) --prefix=$(CURDIR)/debian/tmp/usr install --without-python                        
 	for pyver in $(shell pyversions -rv); do \
 		pyid=`echo $$pyver | tr -d .`; \
-		$(JAM) --prefix=$(CURDIR)/debian/tmp/usr install --with-python --with-mpi --pythonid=py$$pyid python=$$pyver; \
+		$(JAM) --prefix=$(CURDIR)/debian/tmp/usr install --with-python --with-mpi --xpythonid=py$$pyid python=$$pyver; \
 	done
 
 	install --mode=755 -D debian/rtupdate debian/tmp/usr/share/python/runtime.d/libboost-python$(PKGVERSION)-dev.rtupdate
