@@ -1,12 +1,16 @@
 boost1.41 (1.41.0-1) unstable; urgency=low
 
   * New upstream.
+
+  * patches/boost-build-pythonid.patch:
+  * rules: Switch --pythonid to --xpythonid;
+    c.f. https://svn.boost.org/trac/boost/ticket/3814
   
   * Merge changes from 1.40.0-5:
     - Switch to source format "3.0 (quilt)".
     - Remove hard-coding of python versions.
 
- -- Steve M. Robbins <smr@debian.org>  Mon, 21 Dec 2009 00:01:01 -0600
+ -- Steve M. Robbins <smr@debian.org>  Sun, 03 Jan 2010 17:23:55 -0600
 
 boost1.40 (1.40.0-4) unstable; urgency=low
 
